# Pidgin-plugin-for-Wikipedia-Lookup

./: .gitignore  CMakeLists.txt  COPYING  DESCRIPTION  Makefile  README  create_wplookup  main-window.c  wikiinfo.c  wikiinfo.h  wpconf.h  wpconf.h.in  wplanguage.c  wplanguage.h  wplookup.c  wplookup.h  wpsettings.c  wpsettings.h  wputility.c  wputility.h  wpview.c  wpview.h
findLibrary/: FindPIDGIN.cmake  FindWEBKIT.cmake
resources/: main-ltr.css
source/: CMakeCache.txt  CMakeLists.txt  wplanguage.c  wplanguage.h  wplookup.h  wputility.c  wpview.c  wpview.h  wpweb.c  wpweb.h
source/cmake/Modules/: FindGIO2.cmake  FindLibSoup2.cmake  FindLibXml2.cmake  FindPidgin.cmake  FindPurple.cmake  FindWebkitGtk.cmake  FindWpLookup.cmake
source/findLibrary/: FindGIO2.cmake  FindLIBXML2.cmake  FindLibSoup2.cmake  FindPIDGIN.cmake  FindPURPLE.cmake  FindWEBKIT.cmake
source/test/: CMakeLists.txt  test.c
source/wpLookup/: CMakeLists.txt  wparticle.c  wparticle.h  wplinkedlist.c  wplinkedlist.h  wplookup.c  wplookup.h  wpopensearch.c  wpopensearch.h  wpxml.c  wpxml.h
source/wpLookup/tests/: CMakeLists.txt  test.c  testlinkedlist.c
source/wplPidgin/: CMakeLists.txt  DESCRIPTION  Doxyfile.in  README  standalone.c  wpconf.h.in  wplPidgin.c  wplPidgin.h  wplPreview.c  wplPreview.h  wplSettings.c  wplSettings.h
source/wplPidgin/tests/: CMakeLists.txt  test_settings.c
